--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,15 @@
-h1{ font-family: 'Courier New', Courier, monospace;
- font-weight: 800;
- font-style: oblique;
- font-size: 76px;
- color:red;
- text-decoration: double wavy,blue ;
- word-spacing: normal;
- text-indent: ;
- background-color: black;
-}
-
-body{
-    
-    
-    border-radius: 50px;
-    background-image: repeating-conic-gradient(pink,red,lightblue);
-    
+div{ 
+    height: 200px;
+    width: 200px;
+    background-color: red;
+     animation-name:  example;
+   animation-duration: 20ss ;
+    position: relative;
+  }
+@keyframes example {
+  0% {background-color: aqua;left: 0;top: 0;}
+  25% {background-color: beige;left: 300px;top: 0;}
+  50% {background-color: blueviolet;top: 300px;left: 300px;}
+  75% {background-color: chartreuse;left: 0;top: 300px;}
+  100% {background-color: black;top: 0px;left: 0px;}    
 }
